--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body class="ink-bg min-h-screen">
   <div id="root"></div>
